turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:36: error: not found: value colors
  setCouleurBrosse(colors(c));baisseBrosse();leveBrosse()
                   ^Turmite:15: error: not found: value etatCourant
  colore(rule(etatCourant)(r)(0))
              ^